<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D5F1FF"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/people"
        android:layout_width="wrap_content"
        android:layout_height="123dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/peopleImage"
        android:scaleType="fitStart"
        android:src="@mipmap/user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/cars"
        android:layout_width="145dp"
        android:layout_height="124dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/carLabel"
        android:scaleType="centerInside"
        android:src="@mipmap/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="107dp"
        android:layout_height="45dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginBottom="236dp"
        android:text="@string/carText"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cars"
        app:layout_constraintVertical_bias="0.205" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="115dp"
        android:layout_height="44dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:text="@string/peopleText"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/people"
        app:layout_constraintVertical_bias="0.169" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="191dp"
        android:layout_height="87dp"
        android:layout_marginTop="152dp"
        android:text="@string/lableSelect"
        android:textColor="#226EA1"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>